--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -100,7 +100,7 @@ HFILES = abstract_int.h debug.h gnutls_compress.h gnutls_cipher.h	\
 	locks.h gnutls_mbuffers.h hash.h gnutls_ecc.h
 
 if ENABLE_PKCS11
-HFILES += pkcs11_int.h pkcs11_spec.h
+HFILES += pkcs11_int.h
 endif
 
 # Separate so we can create the documentation
