--- a/doc/latex/cover.tex.in
+++ b/doc/latex/cover.tex.in
@@ -2,16 +2,11 @@
 
 \thispagestyle{empty}
 
-\hspace{\linewidth}
-\hspace{-1.9cm}
-\includegraphics[height=1.3cm]{../gnutls-logo}
-\vspace{-.4cm}
-\\
 \HRule
 \vspace{.3cm}
 \\
 \begin{tabular}{l@{\extracolsep{3cm}}p{7cm}}
-{\Large{GNUTLS}}
+{\bf{\Large{GnuTLS}}}
 &
 \vspace{-.6cm}
 \begin{flushright}
@@ -21,9 +16,14 @@ This document applies to GnuTLS @VERSION@
 \end{tabular}
 
 \vspace*{\stretch{2}}
+\begin{center}
+\includegraphics{../gnutls-logo.pdf}
+\end{center}
+\vspace*{\stretch{2}}
 
 \begin{flushright}
-by Nikos Mavrogiannopoulos and Simon Josefsson
+by Nikos Mavrogiannopoulos\\
+and Simon Josefsson
 \end{flushright}
 \vspace{-0.5cm}
 \HRule
@@ -45,15 +45,15 @@ This document applies to GnuTLS @VERSION@
 
 \vspace*{\stretch{2}}
 
-\begin{flushleft}
-\par
-Copyright \copyright\ 2011 Free Software Foundation\\
-\par
-Permission is granted to copy, distribute and/or modify this document
-under the terms of the GNU Free Documentation License, Version 1.3
-or any later version published by the Free Software Foundation;
-with no Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.
-A copy of the license is included in the section entitled "GNU
-Free Documentation License".
-\end{flushleft}
+\begin{quotation}
+Copyright \copyright{} 2011 Free Software Foundation, Inc.
+\end{quotation}
 
+\begin{flushleft}
+Permission is granted to copy, distribute and/or modify this document
+under the terms of the GNU Free Documentation License, Version 1.3 or
+any later version published by the Free Software Foundation; with no
+Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.  A
+copy of the license is included in the section entitled ``GNU Free
+Documentation License''.
+\end{flushleft}
