--- a/doc/latex/Makefile.am
+++ b/doc/latex/Makefile.am
@@ -3,7 +3,7 @@ TEX_OBJECTS = gnutls.tex macros.tex fdl.tex cover.tex gnutls.bib
 GEN_TEX_OBJECTS = cha-preface.tex cha-library.tex cha-intro-tls.tex cha-auth.tex \
   cha-cert-auth.tex cha-gtls-app.tex cha-tls-app.tex cha-programs.tex cha-support.tex \
   cha-functions.tex error_codes.tex cha-ciphersuites.tex algorithms.tex \
-  cha-errors.tex
+  cha-errors.tex alerts.tex
 
 cha-preface.tex: ../cha-preface.texi
 	../scripts/mytexi2latex $< > $@
@@ -45,8 +45,12 @@ error_codes.tex: $(top_srcdir)/lib/gnutls_errors.c $(srcdir)/../errcodes
 	$(builddir)/../errcodes --latex > $@-tmp
 	mv -f $@-tmp $@
 
-algorithms.tex: $(srcdir)/../printlist.c $(builddir)/../printlist
+algorithms.tex: ../printlist
 	$(builddir)/../printlist --latex > $@-tmp
+	mv -f $@-tmp $@
+
+alerts.tex: ../alert-printlist
+	$(builddir)/../alert-printlist --latex > $@-tmp
 	mv -f $@-tmp $@
 
 gnutls-api.tex: $(srcdir)/../../lib/*.c $(srcdir)/../../lib/ext/*.c $(srcdir)/../../lib/auth/*.c $(srcdir)/../../lib/algorithms/*.c
@@ -57,6 +61,7 @@ gnutls-api.tex: $(srcdir)/../../lib/*.c $(srcdir)/../../lib/ext/*.c $(srcdir)/..
 		echo "ok"; \
 	done
 	$(srcdir)/../scripts/sort1.pl < $@-tmp > $@-tmp2
+	$(srcdir)/../scripts/split.pl functions < $@-tmp 
 	rm -f $@-tmp
 	mv -f $@-tmp2 $@
 
@@ -68,6 +73,7 @@ x509-api.tex: $(srcdir)/../../lib/x509/*.c
 		echo "ok"; \
 	done
 	$(srcdir)/../scripts/sort1.pl < $@-tmp > $@-tmp2
+	$(srcdir)/../scripts/split.pl functions < $@-tmp 
 	rm -f $@-tmp
 	mv -f $@-tmp2 $@
 
@@ -79,6 +85,7 @@ pgp-api.tex: $(srcdir)/../../lib/openpgp/*.c
 		echo "ok"; \
 	done
 	$(srcdir)/../scripts/sort1.pl < $@-tmp > $@-tmp2
+	$(srcdir)/../scripts/split.pl functions < $@-tmp 
 	rm -f $@-tmp
 	mv -f $@-tmp2 $@
 
@@ -90,6 +97,7 @@ extra-api.tex: $(srcdir)/../../libextra/gnutls_extra.c
 		echo "ok"; \
 	done
 	$(srcdir)/../scripts/sort1.pl < $@-tmp > $@-tmp2
+	$(srcdir)/../scripts/split.pl functions < $@-tmp 
 	rm -f $@-tmp
 	mv -f $@-tmp2 $@
 
@@ -103,3 +111,5 @@ gnutls.pdf: $(TEX_OBJECTS) $(GEN_TEX_OBJECTS) $(SOURCE_GEN_FILES)
 
 clean-am:
 	rm -f $(GEN_TEX_OBJECTS) $(SOURCE_GEN_FILES) gnutls.aux gnutls.bbl gnutls.blg gnutls.idx gnutls.ilg gnutls.ind gnutls.log gnutls.out gnutls.toc
+	rm -rf functions
+
