Added GNUTLS_E_CERTIFICATE_LIST_UNSORTED. If a certificate list is loaded then verify that it is sorted with order to starts with the subject and finished with the trusted root. That way we make sure we don't send data that violate the TLS protocol.

--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -1759,6 +1759,7 @@ extern "C"
 #define GNUTLS_E_PKCS11_USER_ERROR -317
 
 #define GNUTLS_E_CRYPTO_INIT_FAILED -318
+#define GNUTLS_E_CERTIFICATE_LIST_UNSORTED -324
 
 #define GNUTLS_E_UNIMPLEMENTED_FEATURE -1250
 
