Add GTK-DOC Since: tags for 3.0.0 additions.

--- a/doc/manpages/Makefile.am
+++ b/doc/manpages/Makefile.am
@@ -51,6 +51,7 @@ APIMANS += gnutls_hash_get_len.3
 APIMANS += gnutls_hash_fast.3
 APIMANS += gnutls_key_generate.3
 APIMANS += gnutls_alert_get_name.3
+APIMANS += gnutls_alert_get_strname.3
 APIMANS += gnutls_alert_send.3
 APIMANS += gnutls_error_to_alert.3
 APIMANS += gnutls_alert_send_appropriate.3
@@ -130,6 +131,7 @@ APIMANS += gnutls_handshake_get_last_out.3
 APIMANS += gnutls_malloc.3
 APIMANS += gnutls_free.3
 APIMANS += gnutls_pcert_import_x509.3
+APIMANS += gnutls_pcert_list_import_x509_raw.3
 APIMANS += gnutls_pcert_import_x509_raw.3
 APIMANS += gnutls_pcert_import_openpgp.3
 APIMANS += gnutls_pcert_import_openpgp_raw.3
