Simplify GTK-DOC makefile IGNORE_HFILES.

--- a/doc/reference/Makefile.am
+++ b/doc/reference/Makefile.am
@@ -66,62 +66,98 @@ EXTRA_HFILES=
 
 # Header files to ignore when scanning. Use base file name, no paths
 # e.g. IGNORE_HFILES=gtkdebug.h gtkintl.h
-IGNORE_HFILES=compat.h gnutlsxx.h
+IGNORE_HFILES=
 
-# cd lib/ && echo *.h | sed 's/crypto.h//'
-IGNORE_HFILES += auth_anon.h auth_cert.h auth_dh_common.h auth_psk.h	\
-	auth_psk_passwd.h auth_srp.h auth_srp_passwd.h config.h		\
-	debug.h ext_cert_type.h ext_max_record.h \
-	ext_safe_renegotiation.h ext_server_name.h			\
-	ext_session_ticket.h ext_signature.h ext_srp.h			\
-	gnutls_algorithms.h gnutls_auth.h gnutls_buffers.h		\
-	gnutls_cert.h gnutls_cipher.h gnutls_cipher_int.h		\
-	gnutls_compress.h gnutls_constate.h gnutls_cryptodev.h		\
-	gnutls_datum.h gnutls_db.h gnutls_dh.h gnutls_errors.h		\
-	gnutls_extensions.h gnutls_global.h gnutls_handshake.h		\
-	gnutls_hash_int.h gnutls_helper.h gnutls_int.h gnutls_kx.h	\
-	gnutls_mem.h gnutls_mpi.h gnutls_num.h gnutls_pk.h		\
-	gnutls_record.h gnutls_rsa_export.h gnutls_session_pack.h	\
-	gnutls_sig.h gnutls_srp.h gnutls_state.h gnutls_str.h		\
-	gnutls_supplemental.h gnutls_v2_compat.h gnutls_x509.h		\
-	random.h x509_b64.h
+# find lib -name \*.h -exec basename {} \; | grep -v -e abstract.h -e dtls.h -e gnutls.h -e openpgp.h -e pkcs11.h -e pkcs12.h -e x509.h | sort | uniq | sed -e 's/^/\t/' -e 's/$/ \\/'
+IGNORE_HFILES += \
+	abstract_int.h \
+	accelerated.h \
+	aes-x86.h \
+	algorithms.h \
+	anon.h \
+	arg-nonnull.h \
+	c++defs.h \
+	cert.h \
+	cert_type.h \
+	common.h \
+	compat.h \
+	context.h \
+	crypto-backend.h \
+	cryptodev.h \
+	crypto.h \
+	debug.h \
+	dh_common.h \
+	ecc.h \
+	ecdh_common.h \
+	egd.h \
+	element.h \
+	filters.h \
+	gnettle.h \
+	gnutls_auth.h \
+	gnutls_buffers.h \
+	gnutls_cipher.h \
+	gnutls_cipher_int.h \
+	gnutls_compress.h \
+	gnutls_constate.h \
+	gnutls_datum.h \
+	gnutls_db.h \
+	gnutls_dh.h \
+	gnutls_ecc.h \
+	gnutls_errors.h \
+	gnutls_extensions.h \
+	gnutls_global.h \
+	gnutls_int.h \
+	gnutls_kx.h \
+	gnutls_mbuffers.h \
+	gnutls_mem.h \
+	gnutls_mpi.h \
+	gnutls_num.h \
+	gnutls_pk.h \
+	gnutls_record.h \
+	gnutls_rsa_export.h \
+	gnutls_session_pack.h \
+	gnutls_sig.h \
+	gnutls_srp.h \
+	gnutls_state.h \
+	gnutls_str.h \
+	gnutls_supplemental.h \
+	gnutls_v2_compat.h \
+	gnutlsxx.h \
+	gstr.h \
+	hash.h \
+	int.h \
+	keydb.h \
+	libtasn1.h \
+	locks.h \
+	main.h \
+	max_record.h \
+	opencdk.h \
+	openpgp_int.h \
+	packet.h \
+	parser_aux.h \
+	pbkdf2-sha1.h \
+	pkcs11_int.h \
+	psk.h \
+	psk_passwd.h \
+	random.h \
+	safe_renegotiation.h \
+	server_name.h \
+	session_ticket.h \
+	signature.h \
+	srp.h \
+	srp_passwd.h \
+	stream.h \
+	structure.h \
+	system.h \
+	types.h \
+	warn-on-use.h \
+	x509_b64.h \
+	x509_int.h \
+	x86.h
 
-# cd lib/gl/ && echo *.h
-IGNORE_HFILES += alignof.h alloca.h alloca.in.h arg-nonnull.h		\
-	byteswap.in.h c-ctype.h close-hook.h errno.in.h float+.h	\
-	float.in.h gettext.h minmax.h netdb.in.h printf-args.h		\
-	printf-parse.h read-file.h size_max.h sockets.h stdbool.in.h	\
-	stddef.in.h stdint.in.h stdio.h stdio-impl.h stdio.in.h		\
-	stdlib.h stdlib.in.h string.h string.in.h strings.h		\
-	strings.in.h str-two-way.h sys_socket.in.h sys_stat.in.h	\
-	time.h time.in.h unistd.h unistd.in.h w32sock.h warn-on-use.h	\
-	vasnprintf.h wchar.h wchar.in.h xsize.h
-
-# cd lib/gl/sys/ && echo *.h
-IGNORE_HFILES += socket.h stat.h
-
-# cd lib/minitasn1/ && echo *.h
-IGNORE_HFILES += element.h gstr.h int.h libtasn1.h parser_aux.h structure.h
-
-# cd lib/opencdk/ && echo *.h
-IGNORE_HFILES += context.h filters.h keydb.h main.h opencdk.h packet.h	\
-	stream.h types.h
-
-# cd lib/openpgp/ && echo *.h
-IGNORE_HFILES += gnutls_openpgp.h openpgp_int.h
-
-# cd lib/x509/ && echo *.h
-IGNORE_HFILES += common.h pbkdf2-sha1.h x509_int.h
-
-# cd lib/gl/tests/ && echo *.h
-IGNORE_HFILES += arg-nonnull.h c++defs.h intprops.h macros.h		\
-	signature.h warn-on-use.h verify.h zerosize-ptr.h
-
-# cd libextra/ && echo *.h
-IGNORE_HFILES += config.h ext_inner_application.h openssl_compat.h
-
-# cd libextra/gl/ && echo *.h
-IGNORE_HFILES += hmac.h md5.h memxor.h
+# find libextra -name \*.h -exec basename {} \; | grep -v -e extra.h -e openssl.h | sort | uniq | sed -e 's/^/\t/' -e 's/$/ \\/'
+IGNORE_HFILES += \
+	openssl_compat.h
 
 # Images to copy into HTML directory.
 # e.g. HTML_IMAGES=$(top_srcdir)/gtk/stock-icons/stock_about_24.png
