Internals section updated.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -60,14 +60,9 @@ gnutls_TEXINFOS += gnutls-logo.eps gnutls-logo.png
 gnutls_TEXINFOS += pkcs11-vision.dia pkcs11-vision.eps pkcs11-vision.png
 
 # Images.  Make sure there are eps + png + pdf of each, plus the source dia.
-gnutls_TEXINFOS += gnutls-certificate-user-use-case.dia	\
-	gnutls-certificate-user-use-case.eps		\
-	gnutls-certificate-user-use-case.png
 gnutls_TEXINFOS += gnutls-client-server-use-case.dia	\
 	gnutls-client-server-use-case.eps		\
 	gnutls-client-server-use-case.png
-gnutls_TEXINFOS += gnutls-extensions.dia gnutls-extensions.eps	\
-	gnutls-extensions.png
 gnutls_TEXINFOS += gnutls-handshake-sequence.dia			\
 	gnutls-handshake-sequence.eps gnutls-handshake-sequence.png
 gnutls_TEXINFOS += gnutls-handshake-state.dia			\
@@ -78,8 +73,8 @@ gnutls_TEXINFOS += gnutls-objects.dia gnutls-objects.eps	\
 	gnutls-objects.png
 
 imagesdir = $(infodir)
-images_DATA = gnutls-certificate-user-use-case.png		\
-	gnutls-extensions.png gnutls-handshake-state.png	\
+images_DATA = \
+	gnutls-handshake-state.png	\
 	gnutls-layers.png gnutls-modauth.png gnutls-pgp.png	\
 	gnutls-client-server-use-case.png			\
 	gnutls-handshake-sequence.png gnutls-internals.png	\
