corrected child process cleanup and added option to specify diffie hellman parameters file.

--- a/src/crywrap/Makefile.am
+++ b/src/crywrap/Makefile.am
@@ -25,5 +25,5 @@ AM_CPPFLAGS = \
 
 bin_PROGRAMS = crywrap
 
-crywrap_SOURCES = crywrap.c primes.h #compat.h compat.c
+crywrap_SOURCES = crywrap.c primes.h
 crywrap_LDADD = ../../lib/libgnutls.la ../../gl/libgnu.la -lidn
