updated ignored files.

--- a/.gitignore
+++ b/.gitignore
@@ -191,6 +191,39 @@ gl/tests/test-ftell
 gl/tests/test-ftell3
 gl/tests/test-intprops
 gl/tests/test-inttypes
+gl/tests/test-argp
+gl/tests/test-dirent
+gl/tests/test-dup2
+gl/tests/test-environ
+gl/tests/test-frexp-nolibm
+gl/tests/test-frexpl-nolibm
+gl/tests/test-fseeko3
+gl/tests/test-fseterr
+gl/tests/test-getcwd-lgpl
+gl/tests/test-getopt
+gl/tests/test-ignore-value
+gl/tests/test-isnand-nolibm
+gl/tests/test-isnanf-nolibm
+gl/tests/test-isnanl-nolibm
+gl/tests/test-lstat
+gl/tests/test-malloc-gnu
+gl/tests/test-malloca
+gl/tests/test-math
+gl/tests/test-open
+gl/tests/test-printf-frexp
+gl/tests/test-printf-frexpl
+gl/tests/test-rawmemchr
+gl/tests/test-setenv
+gl/tests/test-signbit
+gl/tests/test-sleep
+gl/tests/test-stat
+gl/tests/test-strchrnul
+gl/tests/test-strnlen
+gl/tests/test-symlink
+gl/tests/test-sysexits
+gl/tests/test-unsetenv
+gl/tests/test-vfprintf-posix
+gl/tests/test-vprintf-posix
 gl/time.h
 gl/unistd.h
 gl/warn-on-use.h
