include README to distribution.

--- a/src/crywrap/Makefile.am
+++ b/src/crywrap/Makefile.am
@@ -23,6 +23,7 @@ AM_CPPFLAGS = \
 	-DSYSCONFDIR=\"${sysconfdir}\" \
 	-DCRYWRAP_PATCHLEVEL=\"${CRYWRAP_PATCHLEVEL}\"
 
+EXTRA_DIST = README
 bin_PROGRAMS = crywrap
 
 crywrap_SOURCES = crywrap.c primes.h crywrap.h
