--- a/doc/manpages/Makefile.am
+++ b/doc/manpages/Makefile.am
@@ -188,12 +188,15 @@ APIMANS += gnutls_pubkey_get_key_id.3
 APIMANS += gnutls_pubkey_get_pk_rsa_raw.3
 APIMANS += gnutls_pubkey_get_pk_dsa_raw.3
 APIMANS += gnutls_pubkey_get_pk_ecc_raw.3
+APIMANS += gnutls_pubkey_get_pk_ecc_x962.3
 APIMANS += gnutls_pubkey_import.3
 APIMANS += gnutls_x509_crt_set_pubkey.3
 APIMANS += gnutls_x509_crq_set_pubkey.3
 APIMANS += gnutls_pubkey_set_key_usage.3
 APIMANS += gnutls_pubkey_import_pkcs11_url.3
 APIMANS += gnutls_pubkey_import_rsa_raw.3
+APIMANS += gnutls_pubkey_import_ecc_raw.3
+APIMANS += gnutls_pubkey_import_ecc_x962.3
 APIMANS += gnutls_pubkey_import_dsa_raw.3
 APIMANS += gnutls_pubkey_verify_data.3
 APIMANS += gnutls_pubkey_verify_data2.3
@@ -302,6 +305,7 @@ APIMANS += gnutls_pkcs11_privkey_get_pk_algorithm.3
 APIMANS += gnutls_pkcs11_privkey_get_info.3
 APIMANS += gnutls_pkcs11_privkey_import_url.3
 APIMANS += gnutls_pkcs11_privkey_export_url.3
+APIMANS += gnutls_pkcs11_privkey_generate.3
 APIMANS += gnutls_pkcs11_copy_secret_key.3
 APIMANS += gnutls_pkcs11_copy_x509_crt.3
 APIMANS += gnutls_pkcs11_copy_x509_privkey.3
