--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -1081,7 +1081,7 @@ gnutls_ecc_curve_t gnutls_ecc_curve_get(gnutls_session_t session);
 
   int
     gnutls_certificate_set_x509_trust_file (gnutls_certificate_credentials_t
-                                            res, const char *cafile,
+                                            cred, const char *cafile,
                                             gnutls_x509_crt_fmt_t type);
   int gnutls_certificate_set_x509_trust_mem (gnutls_certificate_credentials_t
                                              res, const gnutls_datum_t * ca,
